@@ -548,24 +548,28 @@ TCanvas* GledGUI::NewCanvas(const Text_t* name, const Text_t* title,
 
   TCanvas* c = 0;
 
-  if(GThread::Self() == mRintThread) {
+  if (GThread::Self() == mRintThread)
+  {
     c = new TCanvas(name, title, w, h);
-    printf ("GledGUI::NewCanvas XXXXX %p\n", c);
-  } else {
-    printf("This locks up rint thread -- investigate.\n");
-    GCondition cnd;
-    cnd.Lock();
+    // printf ("GledGUI::NewCanvas XXXXX %p\n", c);
+  }
+  else
+  {
+    GCondition *cnd = new GCondition;
+    cnd->Lock();
     TTimer t(GForm("*((TCanvas**)0x%lx) = new TCanvas(\"%s\", \"%s\", %d, %d); "
                    "((GCondition*)0x%lx)->Signal();",
-                   &c, name, title, w, h, &c), 0);
+                   &c, name, title, w, h, cnd), 0);
     t.Start(0, kTRUE);
-    mRintThread->Kill(GThread::SigALRM);
+    mRintThread->Kill(GThread::SigINT);
     printf("GledGUI::NewCanvas YYYYY waiting ...\n");
-    cnd.TimedWaitMS(1000);
+    cnd->TimedWaitMS(1000);
     printf("GledGUI::NewCanvas YYYYY %p\n", c);
+    delete cnd;
   }
 
-  if(c && (npx>1 || npy>1)) {
+  if (c && (npx>1 || npy>1))
+  {
     c->Divide(npx,npy);
     c->cd(1);
     c->Update();
