@@ -1,3 +1,12 @@
+2010-06-12  Matevz Tadel  <matevz.tadel@ijs.si>
+
+	* GledView/GledGUI.cxx:
+	Fix root canvas creation.
+
+	* GledView/MTW_ClassView.cxx:
+	Put back code for enclosing window destruction, apparently removed
+	by mistake.
+
 2010-06-11  Matevz Tadel  <matevz.tadel@ijs.si>
 
 	* Glasses/PupilInfo.cxx:
